--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,13 +5,14 @@
 .masthead {
   padding-top:    1rem;
   padding-bottom: 1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
 }
 
 .masthead-title {
   margin-top: 0;
   margin-bottom: 0;
   color: $gray-4;
+  float: left;
 
   a {
     color: inherit;
